force-app/main/default/objects/Customer_Complaint__c/Customer_Complaint__c.object-meta.xml
<CustomObject>
    <description>This custom object stores information about customer complaints.</description>
    <label>Customer Complaint</label>
    <nameField>
        <displayFormat>CP-{000000}</displayFormat>
        <label>Customer Complaint Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Complaints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>