force-app/main/default/objects/Customer_Complaint__c/fields/CI_Test_Field__c.field-meta.xml
<CustomField>
    <fullName>CI_Test_Field__c</fullName>
    <description>CI Test Field; test on 20 May 2026.</description>
    <label>CI Test Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>