force-app/main/default/objects/Customer_Complaint__c/fields/Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer Account</description>
    <label>Customer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Complaints</relationshipLabel>
    <relationshipName>Customer_Complaints</relationshipName>
    <type>Lookup</type>
</CustomField>