force-app/main/default/objects/Customer_Complaint__c/fields/Resolution_Notes__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Notes__c</fullName>
    <description>Resolution Notes</description>
    <label>Resolution Notes</label>
    <type>TextArea</type>
</CustomField>