force-app/main/default/objects/Customer_Complaint__c/fields/SLA_Expiration__c.field-meta.xml
<CustomField>
    <fullName>SLA_Expiration__c</fullName>
    <description>SLA Expiration</description>
    <label>SLA Expiration</label>
    <type>DateTime</type>
</CustomField>